8242847: G1 should not clear mark bitmaps with no marks